# varme-info

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  setup.py
scripts/: create_heat_units.py  create_relationsships.py  create_user.py  seed_heat_units.py
src/: __init__.py  config.py  data.py  functions.py  models.py
src/dash/: dummy.py  style.py
